@@ -6,13 +6,16 @@
 // v2: 2011.2.4, ooyg: Support absolute path in LoadPlugins(). 
 //          Unload plugin if fail to call InitializePlugins().
 //          Reuse element position in RegisterPlugin().
+// v3: 2011.2.7, ooyg: Implement the delay-loaded feature.
 
 #include "stdafx.h"
 #include "Cx_PluginLoader.h"
+#include <Ix_AppWorkPath.h>
 
 Cx_PluginLoader::Cx_PluginLoader()
     : m_instance(NULL)
 {
+    m_inifile[0] = 0;
 }
 
 Cx_PluginLoader::~Cx_PluginLoader()
@@ -35,8 +38,7 @@ void Cx_PluginLoader::ReplaceSlashes(wchar_t* filename)
     }
 }
 
-void Cx_PluginLoader::MakeFullPath(wchar_t* fullpath, 
-                                   HMODULE instance, 
+void Cx_PluginLoader::MakeFullPath(wchar_t* fullpath, HMODULE instance, 
                                    const wchar_t* path)
 {
     if (PathIsRelativeW(path) || 0 == path[0])
@@ -50,35 +52,54 @@ void Cx_PluginLoader::MakeFullPath(wchar_t* fullpath,
         lstrcpynW(fullpath, path, MAX_PATH);
     }
     ReplaceSlashes(fullpath);
+    PathAddBackslashW(fullpath);
 }
 
-long Cx_PluginLoader::LoadPlugins(HMODULE instance, 
-                                  const wchar_t* path, 
-                                  const wchar_t* ext, 
-                                  bool recursive)
+long Cx_PluginLoader::LoadPlugins(HMODULE instance, const wchar_t* path, 
+                                  const wchar_t* ext, bool recursive)
 {
     wchar_t fullpath[MAX_PATH];
 
-    MakeFullPath(fullpath, instance, path);
     m_instance = instance;
+    MakeFullPath(fullpath, instance, path);
 
     return LoadPlugins(fullpath, ext, recursive);
 }
 
-long Cx_PluginLoader::LoadPlugins(const wchar_t* path, 
-                                  const wchar_t* ext, 
+long Cx_PluginLoader::LoadPlugins(const wchar_t* path, const wchar_t* ext, 
+                                  bool recursive)
+{
+    wchar_t fullpath[MAX_PATH];
+    std::vector<std::wstring> filenames;
+
+    MakeFullPath(fullpath, NULL, path);
+    VerifyLoadFileNames();
+    FindPlugins(filenames, fullpath, ext, recursive);
+
+    long count = 0;
+    std::vector<std::wstring>::iterator it;
+
+    for (it = filenames.begin(); it != filenames.end(); ++it)
+    {
+        if (LoadPluginOrDelay(it->c_str()))
+        {
+            count++;
+        }
+    }
+
+    return count;
+}
+
+void Cx_PluginLoader::FindPlugins(std::vector<std::wstring>& filenames, 
+                                  const wchar_t* path, const wchar_t* ext, 
                                   bool recursive)
 {
     WIN32_FIND_DATAW fd;
-    wchar_t rootpath[MAX_PATH];
     wchar_t filename[MAX_PATH];
-    long count = 0;
     const int extlen = lstrlenW(ext);
     std::vector<std::wstring> subpaths;
 
-    MakeFullPath(rootpath, NULL, path);
-
-    lstrcpynW(filename, rootpath, MAX_PATH);
+    lstrcpynW(filename, path, MAX_PATH);
     PathAppendW(filename, L"*.*");
     
     HANDLE hFind = ::FindFirstFileW(filename, &fd);
@@ -90,7 +111,7 @@ long Cx_PluginLoader::LoadPlugins(const wchar_t* path,
         {
             if (fd.cFileName[0] != '.' && recursive)
             {
-                lstrcpynW(filename, rootpath, MAX_PATH);
+                lstrcpynW(filename, path, MAX_PATH);
                 PathAppendW(filename, fd.cFileName);
                 subpaths.push_back(filename);
             }
@@ -101,12 +122,9 @@ long Cx_PluginLoader::LoadPlugins(const wchar_t* path,
 
             if (StrCmpIW(&fd.cFileName[max(0, len - extlen)], ext) == 0)
             {
-                lstrcpynW(filename, rootpath, MAX_PATH);
+                lstrcpynW(filename, path, MAX_PATH);
                 PathAppendW(filename, fd.cFileName);
-                if (LoadPlugin(filename))
-                {
-                    count++;
-                }
+                filenames.push_back(filename);
             }
         }
         bContinue = ::FindNextFileW(hFind, &fd);
@@ -116,10 +134,8 @@ long Cx_PluginLoader::LoadPlugins(const wchar_t* path,
     std::vector<std::wstring>::const_iterator it = subpaths.begin();
     for (; it != subpaths.end(); ++it)
     {
-        count += LoadPlugins(it->c_str(), ext, recursive);
+        FindPlugins(filenames, it->c_str(), ext, recursive);
     }
-    
-    return count;
 }
 
 bool Cx_PluginLoader::issep(wchar_t c)
@@ -132,15 +148,10 @@ long Cx_PluginLoader::LoadPluginFiles(const wchar_t* path,
                                       HMODULE instance)
 {
     wchar_t filename[MAX_PATH];
-    wchar_t apppath[MAX_PATH];
 
     m_instance = instance;
-    GetModuleFileNameW(instance, apppath, MAX_PATH);
-    PathRemoveFileSpecW(apppath);
-
-    lstrcpynW(filename, apppath, MAX_PATH);
-    PathAppendW(filename, path);
-    PathAddBackslashW(filename);
+    MakeFullPath(filename, instance, path);
+    VerifyLoadFileNames();
     
     const int len0 = lstrlenW(filename);
     wchar_t* nameend = filename + len0;
@@ -171,7 +182,7 @@ long Cx_PluginLoader::LoadPluginFiles(const wchar_t* path,
 
     for (; it != filenames.end(); ++it)
     {
-        if (LoadPlugin(it->c_str()))
+        if (LoadPluginOrDelay(it->c_str()))
         {
             count++;
         }
@@ -212,11 +223,18 @@ long Cx_PluginLoader::InitializePlugins()
     return nSuccessLoadNum;
 }
 
+int Cx_PluginLoader::GetPluginIndex(const wchar_t* filename)
+{
+    int i = GetSize(m_modules);
+    while (--i >= 0 && StrCmpIW(filename, m_modules[i].filename) != 0) ;
+    return i;
+}
+
 bool Cx_PluginLoader::RegisterPlugin(HMODULE instance)
 {
     if (FindModule(instance) >= 0)
     {
-        return true;
+        return false;
     }
 
     Ix_Module* pModule = GetModule(instance);
@@ -231,16 +249,12 @@ bool Cx_PluginLoader::RegisterPlugin(HMODULE instance)
         moduleInfo.inited = false;
         GetModuleFileNameW(moduleInfo.hdll, moduleInfo.filename, MAX_PATH);
 
-        std::vector<MODULEINFO>::iterator it = m_modules.begin();
-        for (; it != m_modules.end(); ++it)
+        int moduleIndex = GetPluginIndex(moduleInfo.filename);
+        if (moduleIndex >= 0)
         {
-            if (StrCmpIW(it->filename, moduleInfo.filename) == 0)
-            {
-                *it = moduleInfo;
-                break;
-            }
+            m_modules[moduleIndex] = moduleInfo;
         }
-        if (it == m_modules.end())
+        else
         {
             m_modules.push_back(moduleInfo);
         }
@@ -266,6 +280,7 @@ bool Cx_PluginLoader::LoadPlugin(const wchar_t* filename)
             return false;
         }
         bOwner = true;
+        DisableThreadLibraryCalls(hModule);
     }
 
     int moduleIndex = FindModule(hModule);
@@ -318,6 +333,9 @@ bool Cx_PluginLoader::UnloadPlugin(const wchar_t* name)
 
 long Cx_PluginLoader::UnloadPlugins()
 {
+    SaveClsids();
+    m_cache.Release();
+
     long i = 0;
     long nUnLoadPluginNum = 0;
 
@@ -359,4 +377,261 @@ bool Cx_PluginLoader::ClearModuleItems(HMODULE hModule)
     }
 
     return false;
+}
+
+// The configure file of the delay-loaded feature:
+//     <ExePath>\Config\<ExeName>.ini
+// Example content:
+//     [Plugins]
+//     MyPlugin.plugin.dll==
+//     Plugin2.plugin.dll==
+
+void Cx_PluginLoader::VerifyLoadFileNames()
+{
+    if (0 == m_inifile[0])
+    {
+        GetModuleFileNameW(m_instance, m_inifile, MAX_PATH);
+        PathRenameExtensionW(m_inifile, L".ini");
+        std::wstring name(PathFindFileNameW(m_inifile));
+
+        lstrcpynW(m_inifile, GetAppWorkPath().c_str(), MAX_PATH);
+        PathAppendW(m_inifile, L"Config");
+        PathAppendW(m_inifile, name.c_str());
+
+        LoadFileNames(L"Plugins", m_inifile);
+    }
+}
+
+void Cx_PluginLoader::LoadFileNames(const wchar_t* sectionName, 
+                                    const wchar_t* iniFile)
+{
+    DWORD size = 1024;
+	DWORD retsize = size;
+	wchar_t* buf = NULL;
+
+    m_delayFiles.clear();
+
+	while (true)
+	{
+		buf = new wchar_t[size];
+		wmemset(buf, 0, size);
+
+		retsize = GetPrivateProfileSectionW(sectionName, buf, size, iniFile);
+		if (retsize <= size - sizeof(wchar_t))
+        {
+            break;
+        }
+		else
+		{
+			delete[] buf;
+            buf = NULL;
+			size += 512;
+		}
+	}
+
+    for (wchar_t* pw = buf;  *pw != 0;  pw += wcslen(pw) + 1)
+    {
+        ReplaceSlashes(pw);
+
+        std::wstring filename(pw);
+        unsigned pos = filename.find(L'=');
+
+		if (pos != std::wstring::npos)
+		{
+			filename = filename.substr(0, pos);
+            m_delayFiles.push_back(filename);
+        }
+    }
+
+    delete[] buf;
+    buf = NULL;
+}
+
+bool Cx_PluginLoader::LoadPluginOrDelay(const wchar_t* filename)
+{
+    if (FindModule(GetModuleHandleW(filename)) >= 0)
+    {
+        return false;
+    }
+
+    int len = lstrlenW(filename);
+    std::vector<std::wstring>::iterator it = m_delayFiles.begin();
+
+    for (; it != m_delayFiles.end(); ++it)
+    {
+        const wchar_t* fnend = &filename[max(0, len - GetSize(*it))];
+        if (StrCmpIW(fnend, it->c_str()) == 0)
+        {
+            return LoadPluginCache(filename)
+                || LoadPlugin(filename) && BuildPluginCache(filename);
+        }
+    }
+
+    return LoadPlugin(filename);
+}
+
+bool Cx_PluginLoader::LoadDelayPlugin(const wchar_t* filename)
+{
+    bool ret = false;
+
+    if (LoadPlugin(filename))
+    {
+        int moduleIndex = GetPluginIndex(filename);
+
+        typedef bool (*FUNC_PLUGINLOAD)();
+        FUNC_PLUGINLOAD pfn = (FUNC_PLUGINLOAD)GetProcAddress(
+            m_modules[moduleIndex].hdll, "InitializePlugin");
+
+        if (pfn && !(*pfn)())
+        {
+            LOG_WARNING2(LOGHEAD L"IDS_INITPLUGIN_FAIL", filename);
+            VERIFY(UnloadPlugin(filename));
+        }
+        else
+        {
+            m_modules[moduleIndex].inited = true;
+            BuildPluginCache(filename);
+            ret = true;
+        }
+    }
+
+    return ret;
+}
+
+bool Cx_PluginLoader::BuildPluginCache(const wchar_t* filename)
+{
+    int moduleIndex = GetPluginIndex(filename);
+    ASSERT(moduleIndex >= 0);
+
+    return SaveClsids(m_modules[moduleIndex].clsids, filename);
+}
+
+bool Cx_PluginLoader::LoadPluginCache(const wchar_t* filename)
+{
+    int moduleIndex = GetPluginIndex(filename);
+
+    if (moduleIndex < 0)
+    {
+        MODULEINFO moduleInfo;
+
+        moduleInfo.hdll = NULL;
+        moduleInfo.module = NULL;
+        moduleInfo.owned = false;
+        moduleInfo.inited = false;
+        lstrcpynW(moduleInfo.filename, filename, MAX_PATH);
+
+        moduleIndex = GetSize(m_modules);
+        m_modules.push_back(moduleInfo);
+    }
+
+    if (!m_modules[moduleIndex].clsids.empty())
+    {
+        return true;
+    }
+
+    _XCLASSMETA_ENTRY cls;
+    CLSIDS clsids;
+
+    if (!LoadClsids(clsids, filename))
+    {
+        return false;
+    }
+
+    ZeroMemory(&cls, sizeof(cls));
+    for (CLSIDS::const_iterator it = clsids.begin(); it != clsids.end(); ++it)
+    {
+        cls.clsid = *it;
+        if (m_clsmap.find(cls.clsid.str()) == m_clsmap.end())
+        {
+            m_clsmap[cls.clsid.str()] = MAPITEM(cls, moduleIndex);
+            m_modules[moduleIndex].clsids.push_back(cls.clsid);
+        }
+    }
+
+    return true;
+}
+
+#include <Xml/Ix_ConfigXml.h>
+#include <Xml/ConfigIOSection.h>
+#include <ConvStr.h>
+
+bool Cx_PluginLoader::LoadClsids(CLSIDS& clsids, const wchar_t* filename)
+{
+    Cx_Interface<Ix_ConfigXml> pIFFile(m_cache);
+
+    if (pIFFile.IsNull())
+    {
+        wchar_t xmlfile[MAX_PATH];
+
+        lstrcpyW(xmlfile, m_inifile);
+        PathRenameExtensionW(xmlfile, L".clsbuf");
+
+        if (pIFFile.Create(CLSID_ConfigXmlFile))
+        {
+            m_cache = pIFFile;
+            pIFFile->SetFileName(xmlfile);
+        }
+    }
+
+    clsids.clear();
+
+    if (pIFFile)
+    {
+        CConfigIOSection seclist(pIFFile->GetData()->GetSection(NULL, 
+            L"plugin", L"filename", filename, false));
+        seclist = seclist.GetSection(L"clsids", false);
+
+        for (int i = 0; i < 999; i++)
+        {
+            CConfigIOSection sec(seclist.GetSectionByIndex(L"clsid", i));
+            if (!sec->IsValid())
+            {
+                break;
+            }
+            XCLSID clsid(std::w2a(sec->GetString(L"id")).c_str());
+            if (clsid.valid() && find_value(clsids, clsid) < 0)
+            {
+                clsids.push_back(clsid);
+            }
+        }
+    }
+
+    return !clsids.empty();
+}
+
+bool Cx_PluginLoader::SaveClsids(const CLSIDS& clsids, const wchar_t* filename)
+{
+    Cx_Interface<Ix_ConfigXml> pIFFile(m_cache);
+
+    if (pIFFile)
+    {
+        CConfigIOSection seclist(pIFFile->GetData()->GetSection(NULL, 
+            L"plugin", L"filename", filename));
+        seclist = seclist.GetSection(L"clsids");
+
+        if (seclist.GetSectionCount(L"clsid") == 0)
+        {
+            seclist.RemoveChildren(L"clsid");
+            for (CLSIDS::const_iterator it = clsids.begin(); 
+                it != clsids.end(); ++it)
+            {
+                CConfigIOSection sec(seclist.GetSection(
+                    L"clsid", L"id", std::a2w(it->str()).c_str()));
+
+                _XCLASSMETA_ENTRY* pEntry = FindEntry(*it);
+                if (pEntry && pEntry->pfnObjectCreator)
+                {
+                    sec->SetString(L"class", std::a2w(pEntry->className).c_str());
+                }
+            }
+        }
+    }
+
+    return true;
+}
+
+bool Cx_PluginLoader::SaveClsids()
+{
+    Cx_Interface<Ix_ConfigXml> pIFFile(m_cache);
+    return pIFFile && pIFFile->Save();
 }
