@@ -3,6 +3,7 @@
 
 // author: Zhang Yun Gui, Tao Jian Lin
 // v1: 2010.12
+// v3: 2011.2.7, ooyg: Implement the delay-loaded feature.
 
 #ifndef _X3_CORE_PLUGINLOADER_H
 #define _X3_CORE_PLUGINLOADER_H
@@ -37,9 +38,24 @@ private:
     bool ClearModuleItems(HMODULE hModule);
     void ReplaceSlashes(wchar_t* filename);
     void MakeFullPath(wchar_t* fullpath, HMODULE instance, const wchar_t* path);
+    void FindPlugins(std::vector<std::wstring>& filenames, 
+        const wchar_t* path, const wchar_t* ext, bool recursive);
+    int GetPluginIndex(const wchar_t* filename);
+    virtual bool LoadDelayPlugin(const wchar_t* filename);
+    void VerifyLoadFileNames();
+    void LoadFileNames(const wchar_t* sectionName, const wchar_t* iniFile);
+    bool LoadPluginOrDelay(const wchar_t* filename);
+    bool BuildPluginCache(const wchar_t* filename);
+    bool LoadPluginCache(const wchar_t* filename);
+    bool LoadClsids(CLSIDS& clsids, const wchar_t* filename);
+    bool SaveClsids(const CLSIDS& clsids, const wchar_t* filename);
+    bool SaveClsids();
 
 private:
-    HMODULE m_instance;
+    HMODULE                     m_instance;
+    wchar_t                     m_inifile[MAX_PATH];
+    std::vector<std::wstring>   m_delayFiles;
+    Cx_Ptr                      m_cache;
 };
 
 #endif // _X3_CORE_PLUGINLOADER_H
